--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/orderdb
     username: postgres
-    password: postgres
+    password: 1212
 
   jpa:
     hibernate:
